swl/.antlr/swlParser.java
// Generated from /home/jkomyno/antlr4/swl/swlParser.g4 by ANTLR 4.7.1

/*
 * Developed in May 2018 @UNIPD by:
 * - Brian Federico
 * - Schiabel Alberto
 */

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class swlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, END=2, INPUT=3, PRINT=4, WHILE=5, IF=6, THEN=7, ELSE=8, ELIF=9, 
		FOR=10, VARIABLE=11, ASSIGN=12, TO=13, DO=14, BASIC_SEPARATOR=15, EQUAL=16, 
		N_EQUAL=17, GT_EQUAL=18, LT_EQUAL=19, GT=20, LT=21, AND=22, OR=23, NOT=24, 
		ADD=25, SUB=26, MUL=27, DIV=28, RANGE=29, OPEN_ROUND_BRACKET=30, CLOSED_ROUND_BRACKET=31, 
		STRING=32, BOOL=33, ID=34, NUMBER=35, WS=36, ErrorChar=37, SINGLE_LINE_COMMENT=38, 
		MULTI_LINE_COMMENT=39;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_binaryLogicalOperator = 2, 
		RULE_unaryLogicalOperator = 3, RULE_comparisonOperator = 4, RULE_openRoundBracket = 5, 
		RULE_closedRoundBracket = 6, RULE_expression = 7, RULE_numberOrIdPartial = 8, 
		RULE_conditionalExpression = 9, RULE_printArg = 10, RULE_printVariadic = 11, 
		RULE_define = 12, RULE_assign = 13, RULE_input = 14, RULE_print = 15, 
		RULE_add = 16, RULE_sub = 17, RULE_mul = 18, RULE_div = 19, RULE_doPartialStatement = 20, 
		RULE_conditionalPartialStatement = 21, RULE_conditionalBodyPartial = 22, 
		RULE_whileStatement = 23, RULE_elseIfPartialStatement = 24, RULE_elsePartialStatement = 25, 
		RULE_ifStatement = 26, RULE_rangeIncrementPartial = 27, RULE_range = 28, 
		RULE_forDeclaration = 29, RULE_forRangeStatement = 30;
	public static final String[] ruleNames = {
		"program", "statement", "binaryLogicalOperator", "unaryLogicalOperator", 
		"comparisonOperator", "openRoundBracket", "closedRoundBracket", "expression", 
		"numberOrIdPartial", "conditionalExpression", "printArg", "printVariadic", 
		"define", "assign", "input", "print", "add", "sub", "mul", "div", "doPartialStatement", 
		"conditionalPartialStatement", "conditionalBodyPartial", "whileStatement", 
		"elseIfPartialStatement", "elsePartialStatement", "ifStatement", "rangeIncrementPartial", 
		"range", "forDeclaration", "forRangeStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'begin'", "'end'", "'input'", "'print'", "'while'", "'if'", "'then'", 
		"'else'", "'elif'", "'for'", "'let'", "'be'", "'to'", "'do'", "','", "'eq'", 
		"'neq'", "'gte'", "'lte'", "'gt'", "'lt'", "'and'", "'or'", "'not'", "'add'", 
		"'sub'", "'mul'", "'div'", "'..'", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BEGIN", "END", "INPUT", "PRINT", "WHILE", "IF", "THEN", "ELSE", 
		"ELIF", "FOR", "VARIABLE", "ASSIGN", "TO", "DO", "BASIC_SEPARATOR", "EQUAL", 
		"N_EQUAL", "GT_EQUAL", "LT_EQUAL", "GT", "LT", "AND", "OR", "NOT", "ADD", 
		"SUB", "MUL", "DIV", "RANGE", "OPEN_ROUND_BRACKET", "CLOSED_ROUND_BRACKET", 
		"STRING", "BOOL", "ID", "NUMBER", "WS", "ErrorChar", "SINGLE_LINE_COMMENT", 
		"MULTI_LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "swlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public swlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(swlParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(swlParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(BEGIN);
			setState(64); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(63);
				statement();
				}
				}
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INPUT) | (1L << PRINT) | (1L << WHILE) | (1L << IF) | (1L << FOR) | (1L << VARIABLE) | (1L << ADD) | (1L << SUB) | (1L << MUL) | (1L << DIV) | (1L << ID))) != 0) );
			setState(68);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public MulContext mul() {
			return getRuleContext(MulContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForRangeStatementContext forRangeStatement() {
			return getRuleContext(ForRangeStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				define();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				assign();
				}
				break;
			case ADD:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				add();
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				sub();
				}
				break;
			case MUL:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				mul();
				}
				break;
			case DIV:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				div();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				print();
				}
				break;
			case INPUT:
				enterOuterAlt(_localctx, 8);
				{
				setState(77);
				input();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 9);
				{
				setState(78);
				whileStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 10);
				{
				setState(79);
				ifStatement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 11);
				{
				setState(80);
				forRangeStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryLogicalOperatorContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(swlParser.AND, 0); }
		public TerminalNode OR() { return getToken(swlParser.OR, 0); }
		public BinaryLogicalOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryLogicalOperator; }
	}

	public final BinaryLogicalOperatorContext binaryLogicalOperator() throws RecognitionException {
		BinaryLogicalOperatorContext _localctx = new BinaryLogicalOperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_binaryLogicalOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !(_la==AND || _la==OR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryLogicalOperatorContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(swlParser.NOT, 0); }
		public UnaryLogicalOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryLogicalOperator; }
	}

	public final UnaryLogicalOperatorContext unaryLogicalOperator() throws RecognitionException {
		UnaryLogicalOperatorContext _localctx = new UnaryLogicalOperatorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unaryLogicalOperator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(NOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonOperatorContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(swlParser.EQUAL, 0); }
		public TerminalNode N_EQUAL() { return getToken(swlParser.N_EQUAL, 0); }
		public TerminalNode GT_EQUAL() { return getToken(swlParser.GT_EQUAL, 0); }
		public TerminalNode LT_EQUAL() { return getToken(swlParser.LT_EQUAL, 0); }
		public TerminalNode GT() { return getToken(swlParser.GT, 0); }
		public TerminalNode LT() { return getToken(swlParser.LT, 0); }
		public ComparisonOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonOperator; }
	}

	public final ComparisonOperatorContext comparisonOperator() throws RecognitionException {
		ComparisonOperatorContext _localctx = new ComparisonOperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comparisonOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << N_EQUAL) | (1L << GT_EQUAL) | (1L << LT_EQUAL) | (1L << GT) | (1L << LT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenRoundBracketContext extends ParserRuleContext {
		public TerminalNode OPEN_ROUND_BRACKET() { return getToken(swlParser.OPEN_ROUND_BRACKET, 0); }
		public OpenRoundBracketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openRoundBracket; }
	}

	public final OpenRoundBracketContext openRoundBracket() throws RecognitionException {
		OpenRoundBracketContext _localctx = new OpenRoundBracketContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_openRoundBracket);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(OPEN_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClosedRoundBracketContext extends ParserRuleContext {
		public TerminalNode CLOSED_ROUND_BRACKET() { return getToken(swlParser.CLOSED_ROUND_BRACKET, 0); }
		public ClosedRoundBracketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closedRoundBracket; }
	}

	public final ClosedRoundBracketContext closedRoundBracket() throws RecognitionException {
		ClosedRoundBracketContext _localctx = new ClosedRoundBracketContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_closedRoundBracket);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(CLOSED_ROUND_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public OpenRoundBracketContext openRoundBracket() {
			return getRuleContext(OpenRoundBracketContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ClosedRoundBracketContext closedRoundBracket() {
			return getRuleContext(ClosedRoundBracketContext.class,0);
		}
		public List<UnaryLogicalOperatorContext> unaryLogicalOperator() {
			return getRuleContexts(UnaryLogicalOperatorContext.class);
		}
		public UnaryLogicalOperatorContext unaryLogicalOperator(int i) {
			return getRuleContext(UnaryLogicalOperatorContext.class,i);
		}
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(swlParser.NUMBER, 0); }
		public TerminalNode BOOL() { return getToken(swlParser.BOOL, 0); }
		public ComparisonOperatorContext comparisonOperator() {
			return getRuleContext(ComparisonOperatorContext.class,0);
		}
		public BinaryLogicalOperatorContext binaryLogicalOperator() {
			return getRuleContext(BinaryLogicalOperatorContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
			case OPEN_ROUND_BRACKET:
				{
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NOT) {
					{
					{
					setState(94);
					unaryLogicalOperator();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				openRoundBracket();
				setState(101);
				expression(0);
				setState(102);
				closedRoundBracket();
				}
				break;
			case ID:
				{
				setState(104);
				match(ID);
				}
				break;
			case NUMBER:
				{
				setState(105);
				match(NUMBER);
				}
				break;
			case BOOL:
				{
				setState(106);
				match(BOOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(109);
					if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
					setState(112);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case EQUAL:
					case N_EQUAL:
					case GT_EQUAL:
					case LT_EQUAL:
					case GT:
					case LT:
						{
						setState(110);
						comparisonOperator();
						}
						break;
					case AND:
					case OR:
						{
						setState(111);
						binaryLogicalOperator();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(114);
					expression(5);
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class NumberOrIdPartialContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(swlParser.NUMBER, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public NumberOrIdPartialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberOrIdPartial; }
	}

	public final NumberOrIdPartialContext numberOrIdPartial() throws RecognitionException {
		NumberOrIdPartialContext _localctx = new NumberOrIdPartialContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_numberOrIdPartial);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExpression; }
	}

	public final ConditionalExpressionContext conditionalExpression() throws RecognitionException {
		ConditionalExpressionContext _localctx = new ConditionalExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditionalExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintArgContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(swlParser.STRING, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public PrintArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printArg; }
	}

	public final PrintArgContext printArg() throws RecognitionException {
		PrintArgContext _localctx = new PrintArgContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_printArg);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(STRING);
				}
				break;
			case ID:
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				numberOrIdPartial();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintVariadicContext extends ParserRuleContext {
		public TerminalNode BASIC_SEPARATOR() { return getToken(swlParser.BASIC_SEPARATOR, 0); }
		public PrintArgContext printArg() {
			return getRuleContext(PrintArgContext.class,0);
		}
		public PrintVariadicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printVariadic; }
	}

	public final PrintVariadicContext printVariadic() throws RecognitionException {
		PrintVariadicContext _localctx = new PrintVariadicContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_printVariadic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(BASIC_SEPARATOR);
			setState(130);
			printArg();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(swlParser.VARIABLE, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(swlParser.ASSIGN, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public DefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define; }
	}

	public final DefineContext define() throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_define);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(VARIABLE);
			setState(133);
			match(ID);
			setState(134);
			match(ASSIGN);
			setState(135);
			numberOrIdPartial();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(swlParser.ASSIGN, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ID);
			setState(138);
			match(ASSIGN);
			setState(139);
			numberOrIdPartial();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(swlParser.INPUT, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(INPUT);
			setState(142);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(swlParser.PRINT, 0); }
		public PrintArgContext printArg() {
			return getRuleContext(PrintArgContext.class,0);
		}
		public List<PrintVariadicContext> printVariadic() {
			return getRuleContexts(PrintVariadicContext.class);
		}
		public PrintVariadicContext printVariadic(int i) {
			return getRuleContext(PrintVariadicContext.class,i);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(PRINT);
			setState(145);
			printArg();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BASIC_SEPARATOR) {
				{
				{
				setState(146);
				printVariadic();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(swlParser.ADD, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public TerminalNode TO() { return getToken(swlParser.TO, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ADD);
			setState(153);
			numberOrIdPartial();
			setState(154);
			match(TO);
			setState(155);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public TerminalNode SUB() { return getToken(swlParser.SUB, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public TerminalNode TO() { return getToken(swlParser.TO, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(SUB);
			setState(158);
			numberOrIdPartial();
			setState(159);
			match(TO);
			setState(160);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulContext extends ParserRuleContext {
		public TerminalNode MUL() { return getToken(swlParser.MUL, 0); }
		public NumberOrIdPartialContext numberOrIdPartial() {
			return getRuleContext(NumberOrIdPartialContext.class,0);
		}
		public TerminalNode TO() { return getToken(swlParser.TO, 0); }
		public TerminalNode ID() { return getToken(swlParser.ID, 0); }
		public MulContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mul; }
	}
